[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdown-environments"
authors = [
  {name="AnonymousRand"},
]
description = "Highly customizable extensions for Python-Markdown in the style of LaTeX environments"
readme = "README.md"
requires-python = ">=3.8"
depedencies = [
    "markdown"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/AnonymousRand/python-markdown-environments"
Issues = "https://github.com/AnonymousRand/python-markdown-environments/issues"

[tool.hatch.version]
path = "src/markdown_environments/__init__.py"
